# beyondtranslate

./: .gitignore  AGENTS.md  Cargo.toml  README-ZH.md  README.md  melos.yaml  pubspec.yaml
.github/workflows/: ci.yml
apps/api/: .env.example  .gitignore  Cargo.toml  README.md  config.yaml  openapi.yaml  package.json  wrangler.toml
apps/api/scripts/: cloudflare-build.sh  cloudflare-deploy.sh
apps/api/src/: app.rs  config.rs  error.rs  lib.rs  provider_registry.rs  router.rs  utils.rs
apps/api/src/handlers/: dictionaries.rs  health.rs  index.rs  mod.rs  openapi.rs  reference.rs  translations.rs
apps/api/src/middleware/: cors.rs
apps/api/src/provider_registry/: tests.rs
apps/api/src/routes/: health.rs  index.rs  mod.rs  openapi.rs  reference.rs
apps/api/src/schemas/: health.rs  mod.rs
apps/api/src/services/: engine.rs  mod.rs  provider_registry.rs
apps/biyi_app/: pubspec.yaml
apps/biyi_app/lib/utilities/: remove_nulls.dart
apps/biyi_app/linux/flutter/: generated_plugins.cmake
apps/biyi_app/macos/Runner.xcodeproj/: project.pbxproj
apps/biyi_app/windows/flutter/: generated_plugins.cmake
apps/desktop/: README.md  analysis_options.yaml  build.yaml  dart_dependency_validator.yaml  distribute_options.yaml  pubspec.yaml
apps/desktop/lib/: includes.dart  main.dart
apps/desktop/lib/features/: mini_translator.dart
apps/desktop/lib/i18n/: en.i18n.json  i18n.dart  strings.g.dart  strings_en.g.dart  strings_zh.g.dart  zh.i18n.json
apps/desktop/lib/models/: ext_ocr_engine_config.dart  ext_translation_engine_config.dart  ext_word_pronunciation.dart  models.dart  translation_result.dart  user.dart
apps/desktop/lib/pages/: pages.dart
apps/desktop/lib/routes/: __root.dart  app_router.dart  bootstrap.dart  bootstrap.g.dart  desktop_popup.dart  desktop_popup.g.dart  home.dart  home.g.dart  image_viewer.dart  language_chooser.dart  mini_translator.dart  ocr_engine_chooser.dart  ocr_engine_create_or_edit.dart  ocr_engine_type_chooser.dart  ocr_engines_manage.dart  route_tree.dart  routes.dart  translation_engine_chooser.dart  translation_engine_create_or_edit.dart  translation_engine_type_chooser.dart  translation_engines_manage.dart  translation_target_new.dart
apps/desktop/lib/services/: rust_runtime_debug_service.dart
apps/desktop/lib/themes/: dark_theme.dart  light_theme.dart
apps/desktop/lib/utilities/: fade_page_route.dart  language_util.dart  utilities.dart
apps/desktop/lib/utils/: language_util.dart  utils.dart
apps/desktop/lib/widgets/: widgets.dart
apps/desktop/lib/windowing/: window_controllers.dart
apps/desktop/linux/: CMakeLists.txt  my_application.cc
apps/desktop/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
apps/desktop/macos/Flutter/: GeneratedPluginRegistrant.swift
apps/desktop/macos/Runner/: AppDelegate.swift  Info.plist
apps/desktop/macos/Runner.xcodeproj/: project.pbxproj
apps/desktop/rust/: Cargo.toml
apps/desktop/rust/src/: frb_generated.rs
apps/desktop/rust/src/api/: mirrors.rs  mod.rs  runtime.rs  simple.rs
apps/desktop/rust/src/domain/: engine.rs  settings.rs
apps/desktop/rust_builder/: pubspec.yaml
apps/desktop/rust_builder/android/: build.gradle  settings.gradle
apps/desktop/rust_builder/ios/: beyondtranslate_desktop_rust.podspec
apps/desktop/rust_builder/linux/: CMakeLists.txt
apps/desktop/rust_builder/macos/: beyondtranslate_desktop_rust.podspec
apps/desktop/rust_builder/windows/: CMakeLists.txt
apps/desktop/scripts/: generate_settings.py
apps/desktop/windows/: CMakeLists.txt
apps/desktop/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
crates/api-core/: Cargo.toml
crates/api-core/src/: error.rs  handlers.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  provider.rs
crates/core/src/common/: http_client.rs
crates/core/src/model/: chat_message.rs  chat_request.rs  chat_response.rs  detect_language_request.rs  detect_language_response.rs  language_info.rs  language_pair.rs  look_up_request.rs  look_up_response.rs  mod.rs  recognize_text_request.rs  recognize_text_response.rs  recognized_rect.rs  stream_chunk.rs  text_detection.rs  text_recognition.rs  text_translation.rs  translate_request.rs  translate_response.rs  translation_target.rs  word_definition.rs  word_etymology.rs  word_image.rs  word_phrase.rs  word_pronunciation.rs  word_sentence.rs  word_synonym.rs  word_tag.rs  word_tense.rs
crates/core/src/service/: dictionary.rs  llm.rs  mod.rs  ocr.rs  translation.rs
crates/core/src/service/dictionary/: error.rs  mod.rs  provider.rs  service.rs
crates/core/src/service/translation/: error.rs  mod.rs  provider.rs  service.rs
crates/engine/: Cargo.toml
crates/engine/src/: engine.rs  languages.rs  lib.rs  tests.rs
crates/engine/src/common/: http_client.rs
crates/engine/src/provider/: baidu.rs  caiyun.rs  deepl.rs  google.rs  iciba.rs  mod.rs  system.rs  tencent.rs  youdao.rs
crates/engine/src/provider/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs  xai.rs
crates/engine/src/provider/llm/prompt/: mod.rs
crates/providers/: Cargo.toml
crates/providers/src/: baidu.rs  caiyun.rs  deepl.rs  google.rs  iciba.rs  lib.rs  tencent.rs  youdao.rs
crates/providers/src/baidu/: mod.rs
crates/providers/src/caiyun/: mod.rs
crates/providers/src/deepl/: mod.rs
crates/providers/src/google/: mod.rs
crates/providers/src/iciba/: mod.rs
crates/providers/src/tencent/: mod.rs
crates/providers/src/youdao/: mod.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: builder.rs  config.rs  error.rs  factory.rs  lib.rs  registry.rs  tests.rs
docs/: translation-target-redesign.md
extensions/browser/: components.json  package.json  pnpm-lock.yaml  wxt.config.ts
integrations/popclip/: Config.plist  README.md  build.py
integrations/snipdo/: README.md  build.py  manifest.json
scripts/: _preview.py  codegen.py  format.py
scripts/generate/: browser_api_client.py  frb_bindings.py  languages.py  macos_i18n.py  macos_models.py  runtime_bindings.py
scripts/generate/data/: languages.json
specs/: i18n.md
(+389 files in other folders)
