[workspace]
members = [
    "apps/api",
    "crates/core",
    "crates/providers",
    "crates/runtime",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
hmac = "0.12"
md5 = "0.7"
mockito = "1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
