[package]
name = "beyondtranslate-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.8"
console_error_panic_hook = "0.1.7"
beyondtranslate-core = { path = "../../crates/core" }
beyondtranslate-engine = { path = "../../crates/engine", features = ["iciba"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
