[package]
name = "beyondtranslate-engine"
version = "0.1.0"
edition = "2021"

[features]
default = ["baidu", "caiyun", "deepl", "google", "iciba", "tencent", "youdao"]
baidu = []
caiyun = []
deepl = []
google = []
iciba = []
tencent = []
youdao = []

[dependencies]
beyondtranslate-core = { path = "../core" }
async-trait.workspace = true
base64.workspace = true
getrandom.workspace = true
hmac.workspace = true
md5.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Media_Ocr", "Graphics_Imaging", "Storage_Streams"] }

[dev-dependencies]
tokio.workspace = true
