[package]
name = "beyondtranslate-engine"
version = "0.1.0"
edition = "2021"

[features]
default = ["anthropic", "baidu", "caiyun", "deepl", "google", "ollama", "openai", "tencent", "xai", "youdao"]
anthropic = []
baidu = []
caiyun = []
deepl = []
google = []

ollama = []
openai = []
tencent = []
xai = []
youdao = []

[dependencies]
beyondtranslate-core = { path = "../core" }
async-trait.workspace = true
base64.workspace = true
getrandom.workspace = true
hmac.workspace = true
md5.workspace = true
futures-util = "0.3"
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Media_Ocr", "Graphics_Imaging", "Storage_Streams"] }

[dev-dependencies]
tokio.workspace = true
