[package]
name = "beyondtranslate-providers"
version = "0.1.0"
edition = "2021"

[features]
default = ["deepl"]
baidu = []
caiyun = []
deepl = []
google = []
iciba = []
tencent = []
youdao = []

[dependencies]
beyondtranslate-core = { path = "../core", default-features = false }
async-trait.workspace = true
base64.workspace = true
hmac.workspace = true
md5.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
