[package]
name = "beyondtranslate-runtime"
version = "0.1.0"
edition = "2021"

[features]
default = ["deepl"]
baidu = ["beyondtranslate-providers/baidu"]
caiyun = ["beyondtranslate-providers/caiyun"]
deepl = ["beyondtranslate-providers/deepl"]
google = ["beyondtranslate-providers/google"]
iciba = ["beyondtranslate-providers/iciba"]
tencent = ["beyondtranslate-providers/tencent"]
youdao = ["beyondtranslate-providers/youdao"]

[dependencies]
beyondtranslate-core = { path = "../core" }
beyondtranslate-providers = { path = "../providers", default-features = false }
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
